--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/FitTrackerApp
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
