--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.28'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4.1'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+   // implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 }
