--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     hibernate:
       ddl-auto: create
   show-sql: true
+logging:
+  level:
+    org.springframework: DEBUG
+    com.example: DEBUG
