--- a/build.gradle
+++ b/build.gradle
@@ -28,28 +28,27 @@ repositories {
 
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4.1'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
-    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.1.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
-    compileOnly "org.mapstruct:mapstruct:1.5.5.Final"
+    implementation "org.mapstruct:mapstruct:1.5.5.Final"
 }
 
 compileJava {
     options.compilerArgs += ["-Amapstruct.defaultComponentModel=spring"]
 }
-
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
