--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,6 @@ logging:
   level:
     org.springframework: DEBUG
     com.example: DEBUG
+myapp:
+  api:
+    url="https://api.edamam.com/api/food-database/v2/parser"
