repository unit tests

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation "org.mapstruct:mapstruct:1.5.5.Final"
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
-
+    testImplementation 'org.springframework.security:spring-security-test:6.1.5'
+    testImplementation 'mysql:mysql-connector-java'
 }
 
 compileJava {
