--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -15,6 +15,8 @@ spring:
     defer-datasource-initialization: true
   main:
     allow-bean-definition-overriding: true
+  flyway:
+    enabled: false
 
 logging:
   level:
