--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
     properties:
         hibernate:
             format_sql: true
+    defer-datasource-initialization: false
   flyway:
     baseline-on-migrate: true
     user: root
