--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     ports:
       - "33006:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - /c/Users/mjktb/OneDrive/Dokumenty/projects/FitTrackerApp/volumes/db:/var/lib/mysql
 volumes:
   mysql_data:
