--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,20 @@ plugins {
     id 'org.springframework.boot' version '3.1.2'
     id 'io.spring.dependency-management' version '1.1.2'
     id "io.freefair.lombok" version "8.3"
-
 }
 
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com'
-version = '0.0.1-SNAPSHOT'
+version = '1'
 
 java {
     sourceCompatibility = '17'
 }
 
-
+test {
+    useJUnitPlatform()
+}
 
 configurations {
     compileOnly {
@@ -55,9 +56,3 @@ dependencies {
     implementation 'org.flywaydb:flyway-mysql:9.16.3'
 }
 
-compileJava {
-    options.compilerArgs += ["-Amapstruct.defaultComponentModel=spring"]
-}
-test {
-    useJUnitPlatform()
-}
