--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,13 +6,14 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     show-sql: true
     properties:
         hibernate:
             format_sql: true
     defer-datasource-initialization: false
   flyway:
+    enabled: false
     baseline-on-migrate: true
     user: root
     password: root
