--- a/build.gradle
+++ b/build.gradle
@@ -54,5 +54,7 @@ dependencies {
 
     implementation 'org.flywaydb:flyway-core:9.16.3'
     implementation 'org.flywaydb:flyway-mysql:9.16.3'
+
+    implementation "com.stripe:stripe-java:24.0.0"
 }
 
