--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     show-sql: true
     properties:
         hibernate:
@@ -49,6 +49,8 @@ api:
   burnedCalories:
     url: 'https://fitness-calculator.p.rapidapi.com/burnedcalorie'
 
+  macro-calculator:
+    url: 'https://fitness-calculator.p.rapidapi.com/macrocalculator'
 
 frontend:
   url: ${FRONTEND_URL} #"http://localhost:4200"
