--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,13 @@ repositories {
     mavenCentral()
 }
 
+
+configurations {
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
@@ -53,6 +60,7 @@ dependencies {
     implementation 'org.flywaydb:flyway-core:9.16.3'
     implementation 'org.flywaydb:flyway-mysql:9.16.3'
 
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation "com.stripe:stripe-java:24.0.0"
 }
 
